--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-three/drei": "^9.120.3",
+    "@react-three/fiber": "^8.17.10",
     "@supabase/supabase-js": "^2.47.0",
+    "@types/three": "^0.170.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
@@ -34,7 +37,8 @@
     "react-router-dom": "^6.22.3",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
